--- a/_layouts/post_notitle.html
+++ b/_layouts/post_notitle.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<article class="post_notitle">
 
   <div class="entry">{{ content }}</div>
 
