--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -3,15 +3,14 @@
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
-  margin: 20px 0 20px 0;
-  overflow: scroll;
+  overflow: auto;
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: Consolas, SimHei;
+  color: #005db4;
+  margin: 3px;
+  padding: 3px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
