--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
       </div>
     </div>
 
+    <a class="toTop" href="#"></a>
+    
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
