--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@
 
 html {
   font-size: 100%;
+  scroll-behavior:smooth; 
 }
 
 body {
@@ -25,6 +26,7 @@ body {
 	background: rgba(221, 255, 240, 0.575);
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  scroll-behavior:smooth; 
 }
 
 .container {
@@ -145,6 +147,28 @@ img {
 
 .clearfix:after {
     clear: both;
+}
+
+
+.toTop{
+  position: sticky;
+  display: block;
+  border-radius: 50%;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E %3Cpath fill='%23ffffff' d='M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z'%3E%3C/path%3E %3C/svg%3E") center no-repeat dodgerblue;
+  background-size: 50%;
+  width: 50px;
+  height: 50px;
+
+  float: right;
+  margin-top:-50px;
+  top: -200px;
+  right: 60px;
+  transform: translateY(calc(100vh + 50px));
+
+  @include mobile {
+    top: -200px;
+    right: 40px;
+  }
 }
 
 /*********************/
