--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
-  <body>
+  <body id="top">
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <a class="toTop" href="#"></a>
+    <a class="toTop" href="#top"></a>
     
     <div id="main" role="main" class="container">
       {{ content }}
