--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,9 @@
       </div>
     </div>
 
-    <a class="toTop" href="#top"></a>
+    <!-- <a class="toTop" href="#top"></a> -->
+    
+    <a class="toTop" href="javascript:window.scrollTo(0,0)"></a>
     
     <div id="main" role="main" class="container">
       {{ content }}
