--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">文章</a>
-            <a href="{{ site.baseurl }}/about">关于</a>
+            <a href="{{ site.baseurl }}/">文章列表</a>
+            <a href="{{ site.baseurl }}/about">关于博客</a>
           </nav>
         </header>
       </div>
